@@ -22,6 +22,8 @@ exportMethods(sampleData, "sampleData<-",
               getGenotype,
               getGenotypeAlleles,
               refDosage,
+              altDosage,
+              alleleDosage,
               getVariableLengthData,
               titv,
               alleleFrequency,
