@@ -2,9 +2,13 @@
 \alias{getGenotype}
 \alias{getGenotypeAlleles}
 \alias{refDosage}
+\alias{altDosage}
+\alias{alleleDosage}
 \alias{getGenotype,SeqVarGDSClass-method}
 \alias{getGenotypeAlleles,SeqVarGDSClass-method}
 \alias{refDosage,SeqVarGDSClass-method}
+\alias{altDosage,SeqVarGDSClass-method}
+\alias{alleleDosage,SeqVarGDSClass-method}
 
 \title{Get genotype data}
 
@@ -17,6 +21,8 @@
 \S4method{getGenotype}{SeqVarGDSClass}(gdsobj, use.names=TRUE)
 \S4method{getGenotypeAlleles}{SeqVarGDSClass}(gdsobj, use.names=TRUE, sort=FALSE)
 \S4method{refDosage}{SeqVarGDSClass}(gdsobj, use.names=TRUE)
+\S4method{altDosage}{SeqVarGDSClass}(gdsobj, use.names=TRUE)
+\S4method{alleleDosage}{SeqVarGDSClass}(gdsobj, n=0, use.names=TRUE)
 }
 
 \arguments{
@@ -25,6 +31,9 @@
     variant IDs as dimnames of the resulting matrix.}
   \item{sort}{Logical for whether to sort alleles lexographically ("G/T"
     instead of "T/G").}
+  \item{n}{An integer or integer vector indicating which allele to return dosage
+  of.  \code{n=0} is the reference allele, \code{n=1} is the first
+  alternate allele, and so on. \code{n} may have length 1 to return the dosage of the same allele for all variants, or length=number of variants in the current filter to count a different allele for each variant.}
 }
 
 \details{
@@ -55,6 +64,14 @@
   \code{refDosage} returns an integer matrix with the dosage of the
   reference allele: 2 for two copies of the reference allele ("0/0"), 1
   for one copy of the reference allele, and 0 for two alternate alleles.
+
+  \code{altDosage} returns an integer matrix with the dosage of any
+  alternate allele: 2 for two alternate alleles ("1/1", "1/2", etc.), 1
+  for one alternate allele, and 0 for no alternate allele (homozygous reference).
+
+  \code{alleleDosage} returns an integer matrix with the dosage of the
+  specified allele only: 2 for two copies of the allele ("0/0" if \code{n=0}, "1/1" if \code{n=1}, etc.), 1
+  for one copy of the specified allele, and 0 for no copies of the allele.
 }
 
 \author{Stephanie Gogarten}
@@ -62,7 +79,9 @@
 \seealso{
   \code{\link{SeqVarGDSClass}},
   \code{\link{applyMethod}},
-  \code{\link[SeqArray]{seqGetData}}
+  \code{\link[SeqArray]{seqGetData}},
+  \code{\link[SeqArray]{seqSetFilter}},
+  \code{\link{alleleFrequency}}
 }
 
 \examples{
@@ -74,6 +93,9 @@ seqSetFilter(gds, variant.id=variant.id[1:5],
 getGenotype(gds)
 getGenotypeAlleles(gds)
 refDosage(gds)
+altDosage(gds)
+alleleDosage(gds, n=0)
+alleleDosage(gds, n=1)
 seqClose(gds)
 }
 
